--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>Наша многопользовательская игра</title>
     <style>
       canvas {
-        width: 800px;
-        height: 600px;
+        width: 1024px;
+        height: 1024px;
         border: 5px solid black;
       }
     </style>
@@ -14,4 +14,5 @@
     <canvas id="canvas"></canvas>
   </body>
   <script src="/static/game.js?x76964"></script>
+  <script src="/static/map.js"></script>
 </html>
