--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="/socket.io/socket.io.js?x76964"></script>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="FIELD"></canvas>
   </body>
   <script src="/static/game.js?x76964"></script>
 </html>
