--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <title>Наша многопользовательская игра</title>
     <style>
       canvas {
-        width: 800px;
-        height: 600px;
+        width: 1024px;
+        height: 1024px;
         border: 5px solid black;
       }
     </style>
     <script src="/socket.io/socket.io.js?x76964"></script>
   </head>
   <body>
-    <canvas id="FIELD"></canvas>
+    <canvas id="FIELD" width="1024" height="1024"></canvas>
   </body>
   <script src="/static/game.js?x76964"></script>
+  <script src="/static/map.js"></script>
 </html>
