--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
       canvas {
         width: 1024px;
         height: 1024px;
-        border: 5px solid black;
+        border: 0px solid black;
+        background-color: white;
+        
+      }
+      body{
+        margin: 0px;
+        background-color: turquoise;
       }
     </style>
     <script src="/socket.io/socket.io.js?x76964"></script>
